unpackaged/main/default/objects/Promotions_and_Rebates__c/Promotions_and_Rebates__c.object-meta.xml
<CustomObject>
    <label>Promotions and Rebates</label>
    <nameField>
        <displayFormat>R&amp;P-{00000}</displayFormat>
        <label>Promotions and Rebates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions and Rebates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>