unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Claim_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Claim_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will indicate if the claim form has been received.</description>
    <inlineHelpText>This box will indicate if the claim form has been received.</inlineHelpText>
    <label>Claim Form Received</label>
    <type>Checkbox</type>
</CustomField>