unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Claim_Form_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Claim_Form_Received_By__c</fullName>
    <description>This box will indicate who received the claim form.</description>
    <inlineHelpText>This box will indicate who received the claim form.</inlineHelpText>
    <label>Claim Form Received By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>