unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Claim_Form_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Form_Submission_Date__c</fullName>
    <description>This field will indicate the date that the claim form for the promotion or rebate was submitted.</description>
    <inlineHelpText>This field will indicate the date that the claim form for the promotion or rebate was submitted.</inlineHelpText>
    <label>Claim Form Submission Date</label>
    <type>Date</type>
</CustomField>