unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>