unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date__c</fullName>
    <description>This field will indicate the date of submission for an opportunity. This field is only evaluating for MCA Oppty and Lease Oppty.</description>
    <formula>IF( Opportunity__r.RecordTypeId ="01280000000BZwl",   DATEVALUE(  Opportunity__r.Fund_Date__c   ),   DATEVALUE(  Opportunity__r.Fund_Date__c  ))</formula>
    <inlineHelpText>This formula field will indicate the date of submission for an opportunity. This field is only evaluating for MCA Oppty and Lease Oppty.</inlineHelpText>
    <label>Fund Date</label>
    <type>Date</type>
</CustomField>