unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Item_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Serial_Number__c</fullName>
    <description>This field will contain the gift's serial number for all non-cash promotions for verification purposes.</description>
    <inlineHelpText>is field will contain the gift's serial number for all non-cash promotions for verification purposes.</inlineHelpText>
    <label>Item Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>