unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Master Detail for Promo and Rebate tracking.</description>
    <inlineHelpText>Master Detail for Promo and Rebate tracking.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Promotions and Rebates</relationshipLabel>
    <relationshipName>Promotions_and_Rebates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>