unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>This field will indicate the type of opportunity that the promotion and rebates are related to.</description>
    <formula>CASE(Opportunity__r.RecordTypeId, 
"01280000000BZvi", "Lease", 
"01280000000BZwl", "Merchant",
"01280000000BeKZ", "Working Capital",
"Error")</formula>
    <inlineHelpText>This field will indicate the type of opportunity that the promotion and rebates are related to.</inlineHelpText>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>