unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if the customer has met the requirements for the promotion or rebate.</description>
    <inlineHelpText>This field will indicate if the customer has met the requirements for the promotion or rebate.</inlineHelpText>
    <label>Requirements Met</label>
    <type>Checkbox</type>
</CustomField>