unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Requirements_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Met_Date__c</fullName>
    <label>Requirements Met Date</label>
    <type>DateTime</type>
</CustomField>