unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Requirements_Met_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Met_Verified_By__c</fullName>
    <description>This field will indicate who verified that the customer met the requirements for the promotion/rebate.</description>
    <inlineHelpText>This field will indicate who verified that the customer met the requirements for the promotion/rebate.</inlineHelpText>
    <label>Requirements Met Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>