unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <description>This field will indicate the day that the rebate or promotional item was shipped/mailed to the customer.</description>
    <inlineHelpText>This field will indicate the day that the rebate or promotional item was shipped/mailed to the customer.</inlineHelpText>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>