unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Shipment_Verification_By__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Verification_By__c</fullName>
    <description>This field will indicate who verified that the promotion/rebate was shipped to the customer.</description>
    <inlineHelpText>This field will indicate who verified that the promotion/rebate was shipped to the customer.</inlineHelpText>
    <label>Shipment Verification By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>