unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <description>This field will capture the shipping cost for the rebate or promotion.  It will be used in a total cost calculation.</description>
    <inlineHelpText>This field will capture the shipping cost for the rebate or promotion.  It will be used in a total cost calculation.</inlineHelpText>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>