unpackaged/main/default/objects/Promotions_and_Rebates__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>