unpackaged/main/default/objects/Promotions_and_Rebates__c/recordTypes/X2013_Q2_Promo.recordType-meta.xml
<RecordType>
    <fullName>X2013_Q2_Promo</fullName>
    <active>false</active>
    <label>2013 Q2 Promo</label>
</RecordType>