unpackaged/main/default/objects/Promotions_and_Rebates__c/recordTypes/X2013_Q4_Promo.recordType-meta.xml
<RecordType>
    <fullName>X2013_Q4_Promo</fullName>
    <active>true</active>
    <label>2013 Q4 Promo</label>
</RecordType>