unpackaged/main/default/objects/Promotions_and_Rebates__c/recordTypes/X2014_Q2_Promo.recordType-meta.xml
<RecordType>
    <fullName>X2014_Q2_Promo</fullName>
    <active>true</active>
    <label>2014 Q2 Promo</label>
</RecordType>