unpackaged/main/default/objects/Promotions_and_Rebates__c/recordTypes/X2014_Q4_Promo.recordType-meta.xml
<RecordType>
    <fullName>X2014_Q4_Promo</fullName>
    <active>false</active>
    <label>2014 Q4 Promo</label>
</RecordType>