unpackaged/main/default/objects/Promotions_and_Rebates__c/recordTypes/X2015_Q2_Promo.recordType-meta.xml
<RecordType>
    <fullName>X2015_Q2_Promo</fullName>
    <active>false</active>
    <label>2015 Q2 Promo</label>
</RecordType>