unpackaged/main/default/objects/Promotions_and_Rebates__c/recordTypes/X2015_Q3_Q4_Promo.recordType-meta.xml
<RecordType>
    <fullName>X2015_Q3_Q4_Promo</fullName>
    <active>true</active>
    <label>2015 Q3 / Q4 Promo</label>
</RecordType>